# rag-bot-sandbox

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml
docker/: Dockerfile
sandbox/: GigaEmbeddings.py  ask.py  chroma.py  dialog.py  embeddingsamedim.py  embinterface.py  fill_bd.py  pdf_parser.py  predel.py  predel_wo_lc.py  prompt.py  prompt.txt  translate.py
sandbox/bot_with_history/: bot_no_chain.py  bot_no_chain_html.py  nochain_rerank.py  nochain_rerank_html.py
sandbox/chain/: async.py  chain_manually.py  chain_no_chain.py  chain_wo_lc.py
sandbox/chroma_copy/: changing_db.py  changing_db_chroma.py  chroma_for_gigachat.py
sandbox/rerank/: rerank_test.py
sandbox/ruca/: __main__.py  readme.md
sandbox/tgbot/: bot.py  collection_deleting.py  enjoy.py  load_prompt.py  prompt.txt  test.py
