[project]
name = "start"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "gigachat>=0.1.40",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-gigachat>=0.3.11",
    "langchain-huggingface>=0.3.0",
    "sentence-transformers>=5.0.0",
]
